# Perfect-api

./: .gitignore  electron-builder.json  eslint.config.js  index.html  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.js
dist-react/: index.html
dist-react/assets/: index-BKya_Exw.css  index-Cy0prZLt.js  index-DjE8kiFH.js
src/: App.css  App.jsx  Themes.css  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/Hooks/: useClickAway.jsx  useCurrentEntry.jsx  useDirSettingsContext.jsx  useDocsContext.jsx  useFilesContext.jsx  useFilterProjects.jsx  useGetMediaInfo.jsx  useWidthObserver.jsx  useWorkspacePreviewContext.jsx
src/Hooks/FileManager/: useFileMangerContext.jsx  useProjectContext.jsx  useSaveStateOnClose.jsx  useVirtualFileSystem.jsx
src/Hooks/WorkSpace/: useWorkSpaceContentContext.jsx
src/components/GlobalSettingsPopUp/: GlobalSettingsPopUp.css  GlobalSettingsPopUp.jsx
src/electron/: main.cjs  preload.cjs  response.cjs  utils.cjs
src/stores/: FileManagerStore.jsx  HistoryStore.jsx  LexicalEditorStore.jsx  ProjectStore.jsx  ProjectsStore.jsx  UserConfigStore.jsx
src/ui/: App.css  App.jsx  index.css  index.html  main.jsx
src/utils/: ChooseFolder.js  ProjectFileObject.js  UpdateProject.js  buildQueryParams.js  createDocumentDir.js  createNewProject.js  deleteProject.js  detectFromatResponses.js  findLinks.js  findVariable.js  formatTime.js  getProjects.js  monacoHover.js  renameProject.js  updateProjectsFile.js
(+462 files in other folders)
